<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/changeInfo_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF9FF">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="Ro'yxatdan o'tish"
            android:backgroundTint="@color/white"
            app:titleCentered="true"
            app:titleTextColor="@color/buttonColor"
            />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:indicatorColor="@color/buttonColor" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/conformCodeLoadingProgressContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:indeterminateTint="@color/buttonColor"
            android:padding="50dp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/changeUserInfoScrollContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/posterImageView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:background="#D8D8D8"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageView" />

            <Button
                android:id="@+id/uploadAvatarImageButton"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/button_shape"
                android:text="Rasm yuklash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/posterImageView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/ismingiz"
                android:inputType="textPersonName"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/uploadAvatarImageButton">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/familyangiz"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/nameEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/sexContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/lastNameEditText">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/jinsingiz"
                    android:textColor="#161826"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/sexRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/radio_button_1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/buttonColor"
                        android:text="@string/erkak" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/buttonColor"
                        android:text="@string/ayol" />
                </RadioGroup>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/directionMenu"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/yo_nalishingizni_tanlang"
                app:layout_constraintTop_toBottomOf="@id/sexContainer">

                <AutoCompleteTextView
                    android:id="@+id/direction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/brandName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/brendingiz_nomini_kiriting"
                app:layout_constraintTop_toBottomOf="@id/directionMenu">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bioEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="top"
                android:hint="Bio"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/brandName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="90dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/brandLogoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/bioEditText">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/posterLogoImageView"
                    android:layout_width="0dp"
                    android:layout_height="78dp"
                    android:layout_weight="1"
                    android:background="#D8D8D8"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/brandName"
                    app:shapeAppearanceOverlay="@style/radiusImageView" />

                <Button
                    android:id="@+id/uploadLogoButton"
                    style="@style/DefaultButton"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:background="@drawable/button_shape"
                    android:text="Rasm tanlash" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/parol_o_ylab_toping"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/buttonColor"
                app:layout_constraintTop_toBottomOf="@id/brandLogoContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/conformPasswordEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/parolni_takrorlang"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/buttonColor"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registrationButton"
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shape"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/ro_yxatdan_o_tish"
                android:textSize="21sp"
                app:layout_constraintTop_toBottomOf="@+id/conformPasswordEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>